kubernetes/applications/demo-app/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: demo-app
  namespace: dev

  labels:
    app.kubernetes.io/name: demo-app
    app.kubernetes.io/component: service
    app.kubernetes.io/environment: dev

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: demo-app

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
