kubernetes/applications/demo-app/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: demo-app-network-policy
  namespace: dev

  labels:
    app.kubernetes.io/name: demo-app
    app.kubernetes.io/component: application
    app.kubernetes.io/environment: dev

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: demo-app

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environment: dev

      ports:
        - protocol: TCP
          port: 80
